# benchmark

./: Cargo.toml  README.md  graph
benches/: diesel_.rs  elephantry.rs  lib.rs  postgres.rs  sqlx.rs
diesel/: Cargo.toml
diesel/src/: lib.rs
elephantry/: Cargo.toml
elephantry/src/: lib.rs
libpq/: Cargo.toml
libpq/src/: lib.rs
postgres/: Cargo.toml
postgres/src/: lib.rs
sqlx/: Cargo.toml
sqlx/src/: lib.rs
src/: diesel_.rs  elephantry.rs  lib.rs  libpq.rs  postgres.rs  sqlx.rs
src/sql/: structure.sql
