[package]
name = "elephantry-benchmark"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"

[dependencies]
env_logger = "0.9"

[dependencies.uuid]
version = "0.8"
optional = true

[dependencies.uuid1]
package = "uuid"
version = "1.0"
optional = true

[features]
default = ["uuid"]

[workspace]
members = [
    "diesel",
    "elephantry",
    "libpq",
    "postgres",
    "sqlx",
]
