[package]
name = "elephantry-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"

[dependencies.elephantry-benchmark]
path = "../"
version = "0.1"

[dependencies.elephantry]
version = "3.0.0-beta.4"
features = ["date", "uuid"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]
