[package]
name = "elephantry-bench"
version = "0.1.0"
edition.workspace = true

[dependencies]
chrono = "0.4"

[dependencies.elephantry-benchmark]
path = "../"
version = "0.1"

[dependencies.elephantry]
version = "4.0"
features = ["date", "uuid"]

[dependencies.uuid]
version = "1.0"
features = ["v4"]
