[package]
name = "postgres-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
uuid = "1.2"
postgres-derive = "0.4"
postgres-types = "0.2"

[dependencies.postgres]
version = "0.19"
features = ["with-chrono-0_4", "with-uuid-0_8"]

[dependencies.elephantry-benchmark]
path = "../"
version = "0.1"
