[package]
name = "sqlx-bench"
version = "0.1.0"
edition = "2018"

[dependencies]
async-std = "1.7"
chrono = "0.4"
uuid = "0.8"

[dependencies.sqlx]
version = "0.5"
features = ["chrono", "postgres", "runtime-async-std-native-tls", "uuid"]

[dependencies.elephantry-benchmark]
path = "../"
version = "0.1"
