[package]
name = "sqlx-bench"
version = "0.1.0"
edition = "2018"

[dependencies]
async-std = "1.7"
chrono = "0.4"
uuid = "1.0"

[dependencies.sqlx]
version = "0.6"
features = ["chrono", "postgres", "runtime-async-std-native-tls", "uuid"]

[dependencies.elephantry-benchmark]
path = "../"
version = "0.1"
default-features = false
features = ["uuid1"]
